@@ -1,6 +1,7 @@
 ﻿4.0.01.alpha.1 - 24th April 2004
 - The 'Show cooldowns' option ('Interface') now supports dual spec.  Cooldown icons are saved to your class and specialisation (mirroring retail).
 - The 'Show Wowhead links' option ('Interface') now shows Cataclysm links.
+- The 'Mute game sounds' > 'Login' option now mutes the Cataclysm login screen music.
 - The web link feature now shows Cataclysm links.
 - Updated deprecated functions.
 
